Ganti ul li header right position

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
                 <img src="asset/sample-logo.png" alt="">
             </div>
             <ul>
-                <li>Home</li>
-                <li>About</li>
-                <li>Contact</li>
+                <li>Rumah</li>
+                <li>Tentang</li>
+                <li>Kontak</li>
             </ul>
         </div>
         <div class="content">
